--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,5 @@ dependencies {
 
     compile 'com.aurelhubert:ahbottomnavigation:2.1.0'
     compile 'com.github.PhilJay:MPAndroidChart:v3.0.2'
+    implementation 'com.android.support:cardview-v7:26.1.0'
 }
