--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 26
     defaultConfig {
         applicationId "dee.wallet"
-        minSdkVersion 15
+        minSdkVersion 17
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
@@ -33,5 +33,6 @@ dependencies {
 
     compile 'com.aurelhubert:ahbottomnavigation:2.1.0'
     compile 'com.github.PhilJay:MPAndroidChart:v3.0.2'
+    compile 'com.github.lutvie72:RackMonthPicker:1.4'
     implementation 'com.android.support:cardview-v7:26.1.0'
 }
